@@ -1,3 +1,6 @@
+.006
+  - Improved error/status trapping ($@ can be elusive in Mason)
+
 2010-01-14: .005
   - Make net_server and handler_class methods work as setters
   - Add setters for index filename and default extension
